--- a/HungHaStore/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                                             {
                                                 <a class="dropdown-item" href="@Url.Action("Index","Admin/Default")">Quản lý</a>
                                             }
-                                            <a class="dropdown-item" href="#">Đổi mật khẩu</a>
+                                            <a class="dropdown-item" href="@Url.Action("ChangePass","Profile")">Đổi mật khẩu</a>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="@Url.Action("Logout","Security")">Đăng xuất</a>
                                         </div>
