--- a/HungHaStore/Views/Home/ListInvoice.cshtml
+++ b/HungHaStore/Views/Home/ListInvoice.cshtml
@@ -35,7 +35,13 @@
                             {
                                 <p class="text-warning font-weight-bold">Đang xử lý</p>
                             }
-                            else
+                            else if(item.trang_thai == hoa_don.TRANG_THAI_YEU_CAU_HUY)
+                            {
+                                    <p class="text-danger font-weight-bold">Yêu cầu hủy</p>            
+                            }else if(item.trang_thai == hoa_don.TRANG_THAI_HUY)
+                            {
+                                    <p class="text-secondary font-weight-bold">Đã hủy</p>
+                            }else
                             {
                                 <p class="text-success font-weight-bold">Thanh toán thành công</p>
                             }
@@ -47,7 +53,11 @@
                             @Html.DisplayFor(modelItem => item.tg_tao)
                         </td>
                         <td>
-                            <a href="@Url.Action("Checkout","Cart",new { id = item.id })">Chi tiết</a>
+                            <a href="@Url.Action("Checkout","Cart",new { id = item.id })" class="btn btn-secondary">Chi tiết</a>
+                            @if(item.trang_thai == hoa_don.TRANG_THAI_XU_LY)
+                            {
+                                <a href="@Url.Action("RequestCancelInvoice","Home",new { id=item.id})" class="btn btn-danger">Hủy Hóa Đơn</a>
+                            }
                         </td>
                     </tr>
                 }
