--- a/HungHaStore/Views/Product/Detail.cshtml
+++ b/HungHaStore/Views/Product/Detail.cshtml
@@ -60,7 +60,7 @@
                         <div class="quantity">
                             <div class="pro-qty">
                                 <a class="dec qtybtn">-</a>
-                                <input type="text" value="1" name="soluong" readonly>
+                                <input type="text" value="1" name="soluong">
                                 <a class="inc qtybtn">+</a>
                             </div>
                         </div>
