--- a/HungHaStore/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="dropinfo">
                                             <a class="dropdown-item" href="@Url.Action("Edit","Profile",new { id = _identity.id})">Thông tin tài khoản</a>
-                                            <a class="dropdown-item" href="@Url.Action("ListInvoice","Home")">Hóa đơn</a>
+                                            <a class="dropdown-item" href="@Url.Action("Index","Invoice")">Hóa đơn</a>
                                             @if (_identity.quyen == 1)
                                             {
                                                 <a class="dropdown-item" href="@Url.Action("Index","Admin/Default")">Quản lý</a>
