--- a/HungHaStore/Areas/Admin/Views/AInvoice/Index.cshtml
+++ b/HungHaStore/Areas/Admin/Views/AInvoice/Index.cshtml
@@ -132,11 +132,25 @@
             opens: 'left',
             autoUpdateInput: false,
             locale: {
-                cancelLabel: 'Clear'
+                cancelLabel: 'Clear',
                 format: 'YYYY/MM/DD'
             }
         }, function (start, end, label) {
             console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
         });
+        $('input[name="daterange"]').on('apply.daterangepicker', function (ev, picker) {
+            $(this).val(picker.startDate.format('YYYY/MM/DD') + ' - ' + picker.endDate.format('YYYY/MM/DD'));
+        });
+
+        $('input[name="daterange"]').on('cancel.daterangepicker', function (ev, picker) {
+            $(this).val('');
+        });
+
+        $('button[type=reset]').on('click', function () {
+            console.log($('input[name=search]'));
+            console.log($('input[name=daterange]'));
+            $('input[name=search]').val("");
+            $('input[name=daterange]').trigger("cancel.daterangepicker");
+        })
     });
 </script>
