--- a/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HungHaStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,8 +32,7 @@
         <div class="container d-flex flex-column flex-md-row align-items-center">
             <a href="@hostName" class="my-0 mr-md-auto font-weight-normal"><img src="/Assest/img/logo.png" alt=""></a>
             <nav class="my-2 my-md-0 mr-md-3">
-                <a href="#">@HttpContext.Current.Request.Url.Host</a>
-                <a href="#">@HttpContext.Current.Request.Url.Port</a>
+                <a href="#">Dasbroad</a>
                 <a class="p-2 text-white active" href="@Url.Action("Index","AProduct")">Sản phẩm</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","ACategory")">Danh mục</a>
                 <a class="p-2 text-white" href="@Url.Action("Index","AUser")">Khách hàng</a>
