--- a/HungHaStore/Views/Security/Register.cshtml
+++ b/HungHaStore/Views/Security/Register.cshtml
@@ -22,7 +22,7 @@
                     </div>
                     <form action="#" class="signin-form" onsubmit="return valid()" method="get">
                         <div class="form-group mb-3">
-                            <label class="label" for="name">Tài khoản</label>
+                            <label class="label" for="name">Email</label>
                             <input type="email" class="form-control" name="email" placeholder="Email" required="" minlength="6">
                         </div>
                         <div class="form-group mb-3">
