--- a/HungHaStore/Views/Cart/OrderInfo.cshtml
+++ b/HungHaStore/Views/Cart/OrderInfo.cshtml
@@ -19,7 +19,7 @@
             THÔNG TIN ĐẶT HÀNG
         </div>
         <div class="card-body">
-            <form action="@Url.Action("CreateInvoice","Cart")" method="get">
+            <form action="@Url.Action("CreateInvoice","Cart")" method="get" id="form-create-order">
                 <h4>Thông tin nhận hàng</h4>
                 <hr />
                 <div class="form-group">
