--- a/HungHaStore/Content/custom.css
+++ b/HungHaStore/Content/custom.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* HIDE RADIO */
-[type=radio] {
+#form-create-order [type=radio] {
     position: absolute;
     opacity: 0;
     width: 0;
@@ -43,12 +43,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* IMAGE STYLES */
-[type=radio] + img {
+#form-create-order [type=radio] + img {
     cursor: pointer;
 }
 
 /* CHECKED STYLES */
-[type=radio]:checked + img {
+#form-create-order [type=radio]:checked + img {
     outline: 2px solid #f00;
 }
 
